# verbatim

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
verbatim/: main.py  verbatim.py
