[tool.poetry]
name = "verbatim"
version = "0.1.0"
description = ""
authors = ["jannawro"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies.openai-whisper]
git = "https://github.com/openai/whisper.git"
rev = "e58f28804528831904c3b6f2c0e473f346223433" # Point to SHA until a version after v20231117 is released
[tool.poetry.dependencies.pyannote-audio]
git = "https://github.com/pyannote/pyannote-audio.git"
rev = "develop"
[tool.poetry.dependencies]
python = "^3.12"

pydub = "^0.25.1"
halo = "^0.0.31"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
